--- a/construct3-game-uploader/css/c3gu-admin.css
+++ b/construct3-game-uploader/css/c3gu-admin.css
@@ -153,3 +153,8 @@
 .forum-link:hover, .donate-link:hover {
     text-decoration: underline;
 }
+
+.c3gu-shortcode-button {
+    min-width: 150px; /* Adjust as needed */
+    text-align: center;
+}
